; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_aio.c___queue_kicked_iocb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_aio.c___queue_kicked_iocb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kiocb = type { i32, %struct.kioctx* }
%struct.kioctx = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kiocb*)* @__queue_kicked_iocb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__queue_kicked_iocb(%struct.kiocb* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.kiocb*, align 8
  %4 = alloca %struct.kioctx*, align 8
  store %struct.kiocb* %0, %struct.kiocb** %3, align 8
  %5 = load %struct.kiocb*, %struct.kiocb** %3, align 8
  %6 = getelementptr inbounds %struct.kiocb, %struct.kiocb* %5, i32 0, i32 1
  %7 = load %struct.kioctx*, %struct.kioctx** %6, align 8
  store %struct.kioctx* %7, %struct.kioctx** %4, align 8
  %8 = load %struct.kioctx*, %struct.kioctx** %4, align 8
  %9 = getelementptr inbounds %struct.kioctx, %struct.kioctx* %8, i32 0, i32 1
  %10 = call i32 @assert_spin_locked(i32* %9)
  %11 = load %struct.kiocb*, %struct.kiocb** %3, align 8
  %12 = getelementptr inbounds %struct.kiocb, %struct.kiocb* %11, i32 0, i32 0
  %13 = call i64 @list_empty(i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %1
  %16 = load %struct.kiocb*, %struct.kiocb** %3, align 8
  %17 = getelementptr inbounds %struct.kiocb, %struct.kiocb* %16, i32 0, i32 0
  %18 = load %struct.kioctx*, %struct.kioctx** %4, align 8
  %19 = getelementptr inbounds %struct.kioctx, %struct.kioctx* %18, i32 0, i32 0
  %20 = call i32 @list_add_tail(i32* %17, i32* %19)
  store i32 1, i32* %2, align 4
  br label %22

21:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %15
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @assert_spin_locked(i32*) #1

declare dso_local i64 @list_empty(i32*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
